# vecs

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/vecs/: vec2.rs  vec3.rs
