[package]
name = "vecs"
version = "0.1.0"
edition = "2021"
authors = ["JadonBelair"]
license = "MIT"

description = "A Simple Vector Math Crate"
keywords = ["vectors", "vector"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
