[package]
name = "vecs"
version = "0.2.5"
edition = "2021"
authors = ["JadonBelair"]
license = "MIT"
repository = "https://github.com/JadonBelair/vecs"

description = "A Simple Vector Math Crate"
keywords = ["vectors", "vector"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.14"
